--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "babel-plugin-proposal-private-property-in-object": "^0.1.0"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.5"
   },
   "scripts": {
     "start": "react-scripts start",
